--- a/DroneControl/Info.plist
+++ b/DroneControl/Info.plist
@@ -27,6 +27,8 @@
 	</dict>
 	<key>NSLocalNetworkUsageDescription</key>
 	<string>Bu uygulama, MAVLink protokolü üzerinden drone ile iletişim kurmak için yerel ağ erişimine ihtiyaç duyar.</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Bu uygulama, drone'un konumunu harita üzerinde göstermek için konum servislerini kullanır.</string>
 	<key>NSBonjourServices</key>
 	<array>
 		<string>_mavlink._udp</string>
