--- a/esp32-usb-cam-rtsp/platformio.ini
+++ b/esp32-usb-cam-rtsp/platformio.ini
@@ -1,12 +1,9 @@
+; PlatformIO Project Configuration File
+; ESP32-CAM
+
 [env:esp32cam]
 platform = espressif32
 board = esp32cam
 framework = espidf
 monitor_speed = 115200
 upload_speed = 460800
-
-board_build.flash_size = 4MB
-
-build_flags = 
-    -DBOARD_HAS_PSRAM
-    -mfix-esp32-psram-cache-issue
